--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,12 @@
   }
 }
 
+.empty-cart-msg {
+  color: #999999;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
 .modal-dialog-slideout {
   min-height: 100%;
   margin: 0 0 0 auto;
@@ -22,6 +28,7 @@
   -webkit-transform: translate(100%, 0) scale(1);
   transform: translate(100%, 0) scale(1);
 }
+
 .modal.fade.show .modal-dialog.modal-dialog-slideout {
   -webkit-transform: translate(0, 0);
   transform: translate(0, 0);
@@ -30,18 +37,26 @@
   -webkit-box-align: stretch;
   height: 100%;
 }
+
 .modal.fade.show .modal-dialog.modal-dialog-slideout .modal-body {
   overflow-y: auto;
   overflow-x: hidden;
 }
+
 .modal-dialog-slideout .modal-content {
   border: 0;
 }
+
 .modal-dialog-slideout .modal-header,
 .modal-dialog-slideout .modal-footer {
-  height: 69px;
+  height: 69px; /* ;) */
   display: block;
 }
+
 .modal-dialog-slideout .modal-header h5 {
   float: left;
+}
+
+#slideOut {
+  padding-right: 0px !important;
 }
